external-crates/move/crates/move-compiler/tests/move_2024/parser/global_access_value_invalid_macro_ident.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/global_access_value_invalid_macro_ident.move:3:9
  │
3 │         ::$a;
  │         ^^
  │         │
  │         Unexpected '::'
  │         Expected An identifier after '::'
